# ucsc-cse40

./: README.md  install.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
cse40/: __init__.py  code.py  question.py  utils.py
tests/: test_import.py
